Fix hiding of top-level collapse button

--- a/_sass/layouts/_config_bulder.scss
+++ b/_sass/layouts/_config_bulder.scss
@@ -30,7 +30,7 @@
         margin-top: 15px;
         display: inline-block;
     }
-    div[data-schemapath="root"] > h3 {
+    div[data-schemapath="root"] > .je-header {
         display: none !important;
     }
     .help-block {
